--- a/src/main/webapp/vistas/ratificaciones/Create.xhtml
+++ b/src/main/webapp/vistas/ratificaciones/Create.xhtml
@@ -26,7 +26,7 @@
                         <p:selectBooleanCheckbox id="status" value="#{ratificacionesController.selected.status}" disabled="true"/>
                     </p:panelGrid>
                     </div>
-                    <p:commandButton actionListener="#{ratificacionesController.create}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args,'RatificacionesCreateDialog');">
+                    <p:commandButton id="create" disabled="#{ratificacionesController.byStatus.size()!=0}" actionListener="#{ratificacionesController.create}" value="#{bundle.Save}" update="display,:RatificacionesListForm:datalist,:growl" oncomplete="handleSubmit(args,'RatificacionesCreateDialog');">
                         <p:confirm header="#{bundle.Confirmacion}" message="#{bundle.MsjConfirmacion}" icon="ui-icon-alert" />
                     </p:commandButton>
                     <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" closable="false">
