--- a/src/main/webapp/vistas/Reportes/list.xhtml
+++ b/src/main/webapp/vistas/Reportes/list.xhtml
@@ -9,7 +9,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <ui:composition template="/template.xhtml">
+        <ui:composition template="/templates/templateBase.xhtml">
             <ui:define name="body">
 
                 <p:layout style="min-width:400px;min-height:200px;">
