--- a/src/main/webapp/vistas/solicitudesInternet/agregarImagen.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/agregarImagen.xhtml
@@ -53,7 +53,7 @@
                         <h:outputText value="#{item.nivel}"/>
                     </p:column>
                 </p:dataTable>
-                <p:commandButton value="Aceptar"  actionListener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}" update="SolicitudesInternetEditForm:agregarForCa:agregarImg,:growl" oncomplete="PF('agregarFormDialog').hide();"/>
+                <p:commandButton value="Aceptar"  actionListener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}" update="SolicitudesInternetEditForm:wizardEditSoli" oncomplete="PF('agregarFormDialog').hide();"/>
                 <p:commandButton value="Cancelar" oncomplete="PF('agregarFormDialog').hide();"/>
             </h:form>
         </p:dialog>        
