--- a/src/main/webapp/vistas/solicitudesInternet/dialogConfirEliminarCatalogo.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/dialogConfirEliminarCatalogo.xhtml
@@ -20,7 +20,7 @@
                             <h:outputText value="#{solicitudesInternetController.selectImgSol.identificador}"/>
                         </p:column>
                     </p:panel>
-                    <p:commandButton value="Aceptar" action="#{solicitudesInternetController.deleRowtList()}" update="SolicitudesInternetEditForm:agregarForCa:agregarImg,:growl, SolicitudesInternetEditForm:idconfirmarUpdate" oncomplete="PF('confirmCataloFormDialog').hide();"/>
+                    <p:commandButton value="Aceptar" action="#{solicitudesInternetController.deleRowtList()}" update="SolicitudesInternetEditForm:wizardEditSoli" oncomplete="PF('confirmCataloFormDialog').hide();"/>
                     <p:commandButton value="Cancelar"  oncomplete="PF('confirmCataloFormDialog').hide();"/>
                 </h:panelGroup>
             </h:form>
