--- a/src/main/webapp/vistas/personas/Editar.xhtml
+++ b/src/main/webapp/vistas/personas/Editar.xhtml
@@ -50,7 +50,6 @@
                                 </p:panelGrid>
                             </div>
                             </p:panel>
-                         <p:commandButton value="#{bundle.Cancel}" actionListener="#{personasController.reset}"  oncomplete="PF('wizEditarPersona').loadStep('tabPersona',true);PF('PersonasEditarDialog').hide();" />
                     </p:tab>
                     <p:tab id="tabImagen" title="#{bundle.ImagenesTitle}">
                         <div class="ui-fluid">
@@ -122,9 +121,11 @@
                                 
                         </p:panel> 
                         </div>                        
-                        <p:commandButton value="#{bundle.Save}"   actionListener="#{personasController.update}" oncomplete="PF('wizEditarPersona').loadStep('tabPersona',true);PF('PersonasEditarDialog').hide();" immediate="true" update=":growl,GestoresListForm:datalist"/>
+                        <p:commandButton value="#{bundle.Save}"   actionListener="#{personasController.update}" oncomplete="PF('wizEditarPersona').loadStep('tabPersona',true);PF('PersonasEditarDialog').hide();" immediate="true" update=":growl,:GestoresListForm:datalist"/>
                     </p:tab>
                 </p:wizard>
+                    
+                         <p:commandButton value="#{bundle.Cancel}" actionListener="#{personasController.reset}"  oncomplete="PF('wizEditarPersona').loadStep('tabPersona',true);PF('PersonasEditarDialog').hide();" />
             </h:panelGroup>
             </h:form>
         </p:dialog>
