--- a/src/main/webapp/vistas/procesoratificacion/List.xhtml
+++ b/src/main/webapp/vistas/procesoratificacion/List.xhtml
@@ -58,7 +58,7 @@
                                     <f:selectItem itemLabel="Activo" itemValue="activo"  />
                                     <f:selectItem itemLabel="Baja" itemValue="baja" /> 
                                     <f:selectItem itemLabel="Pendiente"  itemValue="pendiente" />
-                                    <f:selectItem itemLabel="Ratificacion"  itemValue="ratificacion" />
+                                    <f:selectItem itemLabel="Proceso"  itemValue="proceso" />
                                 </p:selectOneMenu>     
                             </f:facet>
                             <h:outputText value="#{item.status}"/>
